--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
     
 }
 h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Josefin Sans',"brevia", sans-serif;
     font-size: 60px;
     text-align: center;
 }
